--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "React datepicker bound to moment for the locale data and timezones handling",
   "scripts": {
     "start": "webpack-dev-server --content-base demo/",
-    "build": "WEBPACK_ENV=build webpack",
+    "build": "WEBPACK_ENV=build webpack && rm -rf dist && npm run babel",
+    "babel": "babel src --out-dir dist --copy-files",
     "prepublish": "npm run build"
   },
   "dependencies": {
@@ -19,17 +20,20 @@
     "react-popover": "0.4.4"
   },
   "devDependencies": {
+    "babel-cli": "6.14.0",
     "babel-loader": "6.2.4",
     "babel-plugin-add-module-exports": "0.2.1",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-stage-0": "6.5.0",
-    "css-loader": "0.23.1",
     "classnames": "2.2.5",
+    "css-loader": "0.23.1",
+    "extract-text-webpack-plugin": "1.0.1",
     "html-webpack-plugin": "1.6.1",
     "json-loader": "0.5.4",
     "moment": "2.14.1",
     "moment-timezone": "0.5.5",
+    "raw-loader": "0.5.1",
     "react": "15.3.1",
     "react-dom": "15.3.1",
     "style-loader": "0.13.0",
@@ -37,7 +41,8 @@
     "webpack-dev-server": "1.14.1"
   },
   "files": [
-    "lib"
+    "lib",
+    "dist"
   ],
   "main": "./lib/react-moment-datepicker.min.js",
   "author": "Alexis Tondelier",
